--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <p id="order"><a href="order.html">Order Now</a></p>
 
         </div>
-        <div class="half">
+        <div class="half tbl">
             <table border="3">
                 <tr>
-                    <th>Item</th>
-                    <th>Price</th>
+                    <th>ITEM</th>
+                    <th>PRICE</th>
                 </tr>
                 <tr>
                     <td>Mexican Burger</td>
